--- a/trunk/web/creareunion_2.xhtml
+++ b/trunk/web/creareunion_2.xhtml
@@ -9,133 +9,118 @@
 
         <ui:composition template="./WEB-INF/facelets/templates/plantillalogueado.xhtml">
 
-            <ui:define name="title">
+            <ui:define name="title">Crear reunión - Paso 2</ui:define>
 
-            </ui:define>
+            <ui:define name="logoempresa"></ui:define>
 
-            <ui:define name="logoempresa">
+            <ui:define name="left"></ui:define>
 
-            </ui:define>
-
-            <ui:define name="left">
-
-            </ui:define>
-
-            <ui:define name="right">
-
-            </ui:define>
+            <ui:define name="right"></ui:define>
 
             <ui:define name="content">
-                <div class="formulario" id="formularioreunion1">
-                    <ice:form>
-                        <h1> Salas disponibles para la realización de la reunión</h1>
-                        <ice:dataTable id="salasdisponibles"   var="salas" value="#{creaReunionBean.filassalasdisponible}"
-                                       rows="5" columnClasses="tableCol">
-                            <ice:column>
-                                <ice:rowSelector id="seleccionado"
+                <h2 class="sectiontittle">Crear reuni&oacute;n - Paso 2</h2>
+                <h3>Salas disponibles</h3>
+                <ice:form>
+                    <ice:dataTable styleClass="table table-bordered" id="salasdisponibles"   var="salas" value="#{creaReunionBean.filassalasdisponible}"
+                                   rows="5" columnClasses="tableCol">
+                        <ice:column>
+                            <ice:rowSelector id="seleccionado"
 
-                                                 value="#{salas.seleccionada}"
-                                                 multiple="false" 
-                                                 selectionListener="#{creaReunionBean.filaSeleccionadaListener}"
-                                                 />
+                                             value="#{salas.seleccionada}"
+                                             multiple="false" 
+                                             selectionListener="#{creaReunionBean.filaSeleccionadaListener}"
+                                             />
 
-                                <f:facet name="header">
-                                    <ice:outputText id="column1"
-                                                    value="Dirección Sala"/>
-                                </f:facet>
-                                <ice:outputText id="direccionsala" value="#{salas.tipo.direccion}"/>
-
-
-                            </ice:column>
-                            <ice:column>
-                                <f:facet name="header">
-                                    <ice:outputText id="column2"
-                                                    value="Nombre"/>
-                                </f:facet>
-                                <ice:outputText id="nombresala" value="#{salas.tipo.nombresala}"/>
-                            </ice:column>
-                            <ice:column>
-                                <f:facet name="header">
-                                    <ice:outputText id="column3"
-                                                    value="Capacidad"/>
-                                </f:facet>
-                                <ice:outputText id="capacidadsala" value="#{salas.tipo.capacidad}"/>
-                            </ice:column>
-                            <ice:column>
-                                <f:facet name="header">
-                                    <ice:outputText id="column4"
-                                                    value="Coste €/hora"/>
-                                </f:facet>
-                                <ice:outputText id="costesala" value="#{salas.tipo.costealquiler}"/>
-                            </ice:column>
-                            <ice:column>
-                                <f:facet name="header">
-                                    <ice:outputText id="column5"
-                                                    value="Telefono"/>
-                                </f:facet>
-                                <ice:outputText id="telefonosala" value="#{salas.tipo.telefono}"/>
-                            </ice:column>
-                        </ice:dataTable>
-                        <ice:dataPaginator id="paginadorsalasdisponibles" for="salasdisponibles" paginator="true" fastStep="3" paginatorMaxPages="4">
-                            <f:facet name="first">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-first.gif" style="border:none;" title="First Page"></ice:graphicImage>
+                            <f:facet name="header">
+                                <ice:outputText id="column1"
+                                                value="Dirección Sala"/>
                             </f:facet>
-                            <f:facet name="last">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-last.gif" style="border:none;" title="Last Page"></ice:graphicImage>
+                            <ice:outputText id="direccionsala" value="#{salas.tipo.direccion}"/>
+
+
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">
+                                <ice:outputText id="column2"
+                                                value="Nombre"/>
                             </f:facet>
-                            <f:facet name="previous">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-previous.gif" style="border:none;" title="Previous Page"></ice:graphicImage>
+                            <ice:outputText id="nombresala" value="#{salas.tipo.nombresala}"/>
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">
+                                <ice:outputText id="column3"
+                                                value="Capacidad"/>
                             </f:facet>
-                            <f:facet name="next">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
+                            <ice:outputText id="capacidadsala" value="#{salas.tipo.capacidad}"/>
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">
+                                <ice:outputText id="column4"
+                                                value="Coste €/hora"/>
                             </f:facet>
-                        </ice:dataPaginator>
-
-                        <h1>Empresas amigas para invitar a usuarios a la reunión</h1>
-                        <ice:dataTable id="empresasamigas"   var="empresasamigas" value="#{creaReunionBean.filasempresasamigas}"
-                                       rows="5" columnClasses="tableCol">
-                            <ice:column>
-                                <ice:rowSelector id="seleccionadoempresa"
-
-                                                 value="#{empresasamigas.seleccionada}"
-                                                 multiple="true"                                 
-                                                 selectionListener="#{creaReunionBean.filaSeleccionadaEmpresasAmigasListener}"
-                                                 />
-
-                                <f:facet name="header">
-                                    <ice:outputText id="column1"
-                                                    value="Nombre de la empresa"/>
-                                </f:facet>
-                                <ice:outputText id="nombreempresa" value="#{empresasamigas.tipo[1]}"/>
-
-
-                            </ice:column>
-                        </ice:dataTable>
-                        <ice:dataPaginator id="paginadorempresasamigas" for="empresasamigas" paginator="true" fastStep="3" paginatorMaxPages="4">
-                            <f:facet name="first">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-first.gif" style="border:none;" title="First Page"></ice:graphicImage>
+                            <ice:outputText id="costesala" value="#{salas.tipo.costealquiler}"/>
+                        </ice:column>
+                        <ice:column>
+                            <f:facet name="header">
+                                <ice:outputText id="column5"
+                                                value="Telefono"/>
                             </f:facet>
-                            <f:facet name="last">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-last.gif" style="border:none;" title="Last Page"></ice:graphicImage>
+                            <ice:outputText id="telefonosala" value="#{salas.tipo.telefono}"/>
+                        </ice:column>
+                    </ice:dataTable>
+                    <ice:dataPaginator id="paginadorsalasdisponibles" for="salasdisponibles" paginator="true" fastStep="3" paginatorMaxPages="4">
+                        <f:facet name="first">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-first.gif" style="border:none;" title="First Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="last">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-last.gif" style="border:none;" title="Last Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="previous">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-previous.gif" style="border:none;" title="Previous Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="next">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
+                        </f:facet>
+                    </ice:dataPaginator>
+                    <h3>Empresas amigas para invitar a usuarios a la reunión</h3>
+                    <ice:dataTable styleClass="table table-bordered" id="empresasamigas"   var="empresasamigas" value="#{creaReunionBean.filasempresasamigas}"
+                                   rows="5" columnClasses="tableCol">
+                        <ice:column>
+                            <ice:rowSelector id="seleccionadoempresa"
+
+                                             value="#{empresasamigas.seleccionada}"
+                                             multiple="true"                                 
+                                             selectionListener="#{creaReunionBean.filaSeleccionadaEmpresasAmigasListener}"
+                                             />
+
+                            <f:facet name="header">
+                                <ice:outputText id="column1"
+                                                value="Nombre de la empresa"/>
                             </f:facet>
-                            <f:facet name="previous">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-previous.gif" style="border:none;" title="Previous Page"></ice:graphicImage>
-                            </f:facet>
-                            <f:facet name="next">
-                                <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
-                            </f:facet>
-                        </ice:dataPaginator>
-                        <ice:outputText rendered="#{creaReunionBean.errorpaso2}" value="#{creaReunionBean.errorstrpaso2}" styleClass="errorformulario"></ice:outputText>
-                        <ice:commandButton id="creareunionpaso2atras" value="Paso anterior" action="#{creaReunionBean.creaReunionPaso2Anterior}"></ice:commandButton>
-                        <ice:commandButton id="creareunionpaso2" value="Siguiente paso" action="#{creaReunionBean.creaReunionPaso2}"></ice:commandButton>
-
-                    </ice:form>
-                </div>
+                            <ice:outputText id="nombreempresa" value="#{empresasamigas.tipo[1]}"/>
 
 
+                        </ice:column>
+                    </ice:dataTable>
+                    <ice:dataPaginator id="paginadorempresasamigas" for="empresasamigas" paginator="true" fastStep="3" paginatorMaxPages="4">
+                        <f:facet name="first">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-first.gif" style="border:none;" title="First Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="last">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-last.gif" style="border:none;" title="Last Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="previous">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-previous.gif" style="border:none;" title="Previous Page"></ice:graphicImage>
+                        </f:facet>
+                        <f:facet name="next">
+                            <ice:graphicImage url="./xmlhttp/css/xp/css-images/arrow-next.gif" style="border:none;" title="Next Page"></ice:graphicImage>
+                        </f:facet>
+                    </ice:dataPaginator>
+                    <ice:outputText rendered="#{creaReunionBean.errorpaso2}" value="#{creaReunionBean.errorstrpaso2}" styleClass="errorformulario"></ice:outputText>
+                    <ice:commandButton styleClass="btn" id="creareunionpaso2atras" value="Paso anterior" action="#{creaReunionBean.creaReunionPaso2Anterior}" />
+                    <ice:commandButton styleClass="btn" id="creareunionpaso2" value="Siguiente paso" action="#{creaReunionBean.creaReunionPaso2}" />
 
-
-
+                </ice:form>
             </ui:define>
 
         </ui:composition>
